--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -42,7 +42,7 @@
   {cunningham1992}
 
 \qte
-  [Don Coleman and Dan Ash (Hewlett Packard), Bruce Lowther (Micron Semiconductor), \ul{Paul Oman} (University of Idaho)]
+  [Paul Oman]
   {anonymous-2.png}
   {Before developers can claim that they are building maintainable systems, there must be some way to \ul{measure} maintainability}
   {coleman1994}
@@ -68,7 +68,6 @@
 }
 
 \qte
-  [Don Coleman, Dan Ash, Bruce Lowther, Paul Oman]
   {paper-2.png}
   {A software maintainability model is only useful if it can provide developers and maintainers in an industrial setting with more information about the system}
   {coleman1994}
@@ -131,7 +130,7 @@
 \plush{\pptThought{\raggedright``Extending the length can significantly decrease Maintainability Index, even if all of the changes cause the code to be clearer and more understandable.'' --- Tim Gilboy}}
 
 \qte
-  [Tja\u{s}a Heri\u{c}ko et al.]
+  [Tja\u{s}a Heri\u{c}ko]
   {hericko.png}
   {When comparing maintainability measurements from several Index variants, the perception of maintainability could be impacted by the choice of the Index variant used.}
   {hericko2023}
@@ -147,7 +146,6 @@
 \end{itemize}}
 
 \qte
-  [Luca Ardito et al.]
   {slr.png}
   {The SLR outcome provided us with \ul{174 software metrics}, among which we identified a set of 15 most commonly mentioned ones, and 19 metric computation tools available to practitioners.}
   {ardito2022}
