--- a/06-coupling/06-coupling.tex
+++ b/06-coupling/06-coupling.tex
@@ -28,7 +28,7 @@
 \plush{\sqmTitlePage{6}{G0vN6Ah8-js}}
 
 \qte
-  [Wayne P. Stevens, Glenford J. Myers, and \ul{Larry L. Constantine}]
+  [Larry L. Constantine]
   {larry-constantine.jpg}
   {The fewer and simpler the connections between modules, the easier it is to understand each module without reference to other modules.}
   {stevens1974structured}
@@ -63,7 +63,6 @@
   {chidamber1994metrics}
 
 \qte
-  [Jagdish Bansiya and Carl G. Davis]
   {dcc.png}
   {\ul{Direct Class Coupling (DCC)} --- this metric is a count of the different number of classes that a class is directly related to. The metric includes classes that are directly related by attribute declarations and message passing (parameters) in methods.}
   {bansiya2002}
@@ -87,7 +86,6 @@
 % \pitch{\pptQuote{study.png}{We also found evidence of certain `key' classes (with both high fan-in and fan-out) and `client' and `server'-type classes with just high fan-out and fan-in, respectively.}{A. Mubarak et al., \textit{An Evolutionary Study of Fan-in and Fan-out Metrics in OSS}, Proceedings of the 4th International Conference on Research Challenges in Information Science (RCIS), 2010}}
 
 \qte
-  [A. Mubarak et al.]
   {study.png}
   {We also found evidence of certain `key' classes (with both high fan-in and fan-out) and `client' and `server'-type classes with just high fan-out and fan-in, respectively.}
   {mubarak2010}
