--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -28,7 +28,7 @@
 \plush{\sqmTitlePage{8}{JOKxjpAglFU}}
 
 \qte
-  [\ul{Edward Yourdon} and Larry Constantine]
+  [Edward Yourdon]
   {edward-yourdon.jpg}
   {Module cohesion may be conceptualized as the \ul{cement} that holds the processing elements of a module together. In a sense, a high degree of module cohesion is an indication of \ul{close approximation} of inherent problem structure.}
   {yourdon1979structured}
