--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -59,7 +59,7 @@ class Book
 \plush{}
 
 \qte
-  [\ul{Mika M\"{a}ntyl\"{a}}, Jari Vanhanen, Casper Lassenius]
+  [Mika M\"{a}ntyl\"{a}]
   {mika-mantyla.jpg}
   {Dead code is code that has been used in the past, but is currently never executed. Dead code \ul{hinders} code \ul{comprehension} and makes the current program structure \ul{less obvious}.}
   {mantyla2003}
@@ -85,7 +85,7 @@ void main(int x) {
 \plush{}
 
 \qte
-  [\ul{Simone Romano}, Christopher Vendome, Giuseppe Scanniello, Denys Poshyvanyk]
+  [Simone Romano]
   {simone-romano.jpg}
   {Although there is some consensus on the fact that dead code is a common phenomenon, it could be \ul{harmful}, and it seems to matter to software professionals; surprisingly, dead code has received very little empirical attention from the software engineering research community.}
   {romano2018}
@@ -93,7 +93,7 @@ void main(int x) {
 \plush{\pptBanner{Unreachable/Dead Methods in Java}\pptPic{.9}{unreachable.png}\par{\scriptsize Source: \textit{A Graph-based Approach to Detect Unreachable Methods in Java Software}, Simone Romano, Giuseppe Scanniello, Carlo Sartiani, Michele Risi, Proceedings of the 31st Annual ACM Symposium on Applied Computing, 2016\par}}
 
 \qte
-  [\ul{Sebastian Eder}, Maximilian Junker, Benedikt Hauptmann, Elmar Juergens, Rudolf Vaas, Karl-Heinz Prommer]
+  [Sebastian Eder]
   {sebastian-eder.jpg}
   {We conducted the study on the level of methods in the sense of object oriented programming. The systems contains 25,390 methods. We found that \ul{25\% of all methods} were never used during the complete period.}
   {eder2012}
@@ -147,19 +147,19 @@ and the smaller the amount of the abandoned code inside it.''
 {\scriptsize Source: \textit{Advantages and Disadvantages of a Monolithic Repository: A case study at Google}, Ciera Jaspan et al., ICSE, 2018\par}}
 
 \qte
-  [\ul{Ciera Jaspan}, Matthew Jorde, Andrea Knight, Caitlin Sadowski, Edward K. Smith, Collin Winter, Emerson Murphy-Hill]
+  [Ciera Jaspan]
   {ciera-jaspan.jpg}
   {Our survey results show that engineers at Google strongly prefer our monolithic repo, and that \ul{visibility} of the codebase and simple \ul{dependency management} were the primary factors for this preference.}
   {jaspan2018}
 
 \qte
-  [Rachel Potvin and Josh Levenberg]
+  [Rachel Potvin]
   {rachel-potvin.jpg}
   {The Google codebase includes approximately \ul{one billion files} and has a history of approximately 35 million commits spanning Google's entire 18-year existence. The repository contains \ul{86TBa} of data, including approximately \ul{two billion lines of code} in nine million unique source files.}
   {potvin2016}
 
 \qte
-  [Durham Goode et al.]
+  [Durham Goode]
   {durham-goode.jpg}
   {Facebook's main source repository is enormous---many times larger than even the Linux kernel, which checked in at \ul{17 million lines of code} and \ul{44,000 files} in 2013.}
   {goode2014}
