--- a/13-code-churn/13-code-churn.tex
+++ b/13-code-churn/13-code-churn.tex
@@ -41,7 +41,7 @@
 \end{itemize}}
 
 \qte
-  [\ul{Sebastian G. Elbaum} and John C. Munson]
+  [Sebastian G. Elbaum]
   {sebastian-elbaum.jpg}
   {We can measure the increase or decrease in system complexity as measured by a selected metric, \ul{code delta}, or we can measure the total amount of \ul{change} the system has undergone between builds, \ul{code churn}.}
   {munson1998}
@@ -115,7 +115,7 @@ delta for the system will be close to zero.''
   {farago2015cumulative}
 
 \qte
-  [Tobias Olsson, Morgan Ericsson, Anna Wingkvist]
+[Tobias Olsson]
   {tobias-olsson.jpg}
   {Non-normal code churn can be a tangible and measurable \ul{effect} of architectural violations in source code. However, more research is needed to better understand this connection, e.g., if violations are the \ul{cause}, the size of the effect, the cost of refactoring, and whether it is generalizable to other system.}
   {olsson2017}
