--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -130,7 +130,7 @@ assert foo(50) == 42;
   {elmendorf1969}
 
 \qte
-  [\ul{David Gelperin} and Bill Hetzel]
+  [David Gelperin]
   {david-gelperin.jpg}
   {However, only half regularly document their test designs, only half regularly save their tests for reuse after software changes, and an extremely small five percent provide regular \ul{measurements} of code coverage.}
   {gelperin1988}
@@ -168,7 +168,7 @@ measurements of code coverage}.''\par
   {fowler1997}
 
 \qte
-  [\ul{Cem Kaner}, James Bach, Bret Pettichord]
+  [Cem Kaner]
   {cem-kaner.jpg}
   {As you get near 100 percent line coverage, that doesn't tell you the product is near release. It just tells you that the product is no longer \ul{obviously far} from release according to \ul{this measure}.}
   {kaner2002}
@@ -180,7 +180,7 @@ measurements of code coverage}.''\par
   {kochhar2017}
 
 \qte
-  [\ul{Goran Petrovi{\'c}}, Marko Ivankovi{\'c}, Ren{\'e} Just, Gordon Fraser]
+  [Goran Petrovi{\'c}]
   {goran-petrovic.jpg}
   {Google \ul{does not enforce} any code coverage thresholds across the entire codebase. Projects (or groups of projects) are free to define their own thresholds and goals. Many projects opt-into a centralized voluntary alerting system that defines \ul{five levels} of code coverage thresholds.}
   {ivankovi2019}
