--- a/16-mutation-coverage/16-mutation-coverage.tex
+++ b/16-mutation-coverage/16-mutation-coverage.tex
@@ -120,11 +120,11 @@ int fibonacci(int n) {
   {It is a truism that \ul{good} software is easy to \ul{maintain}.}
   {hamlet1997}
 
-\qte
-  [Jefferson A. Offutt and Stephen D. Lee]
-  {richard-hamlet.jpg}
-  {\scriptsize ``Dr. Hamlet presented an early testing system that was embedded in a compiler and performed a version of instrumented weak mutation. Although the method differed significantly from later mutation systems, Hamlet's system seems to be \ul{the first mutation-like testing system}.''}
-  {offutt1991}
+% \qte
+%   [Jefferson A. Offutt]
+%   {richard-hamlet.jpg}
+%   {\scriptsize ``Dr. Hamlet presented an early testing system that was embedded in a compiler and performed a version of instrumented weak mutation. Although the method differed significantly from later mutation systems, Hamlet's system seems to be \ul{the first mutation-like testing system}.''}
+%   {offutt1991}
 
 \qte
   [Richard J. Lipton]
@@ -267,7 +267,7 @@ int fibonacci(int n) {
 \end{multicols}}
 
 \qte
-  [James H. Andrews, \ul{Lionel C. Briand} and Yvan Labiche]
+  [Lionel C. Briand]
   {lionel-briand.jpg}
   {Our analysis suggests that mutants, when using carefully selected mutation operators and after removing equivalent mutants, can provide a \ul{good indication} of the fault detection \ul{ability} of a test suite.}
   {andrews2005}
@@ -280,7 +280,7 @@ int fibonacci(int n) {
 \end{multicols}}
 
 \qte
-  [\ul{Yu-Seung Ma}, Jeff Offutt, and Yong-Rae Kwon]
+  [Yu-Seung Ma]
   {yu-seung-ma.jpg}
   {Comparing with previous mutation systems for procedural programs, \ul{MuJava} is very fast. However, it is relatively slow when it generates and runs lots of mutants.}
   {ma2006}
@@ -293,7 +293,7 @@ int fibonacci(int n) {
 \end{multicols}}
 
 \qte
-  [\ul{Paul Ammann} and Jeff Offutt]
+  [Paul Ammann]
   {paul-ammann.jpg}
   {Three conditions must be present for a failure to be observed:
 1)~The location in the program that contains the fault must be reached (\ul{\textbf{R}eachability}).
@@ -302,19 +302,19 @@ int fibonacci(int n) {
   {ammann2008}
 
 \qte
-  [Yue Jia and \ul{Mark Harman}]
+  [Mark Harman]
   {mark-harman.jpg}
   {Traditional mutation testing considers only first order mutants, created by the injection of a single fault. Often these first order mutants denote trivial faults that are easily killed. \ul{Higher order mutants} are created by the insertion of two or more faults.}
   {jia2009}
 
 \qte
-  [\ul{Yue Jia} and Mark Harman]
+  [Yue Jia]
   {yue-jia.jpg}
   {One \ul{problem} that prevents mutation testing from becoming a practical testing technique is the \ul{high computational cost} of executing the enormous number of mutants against a test set.}
   {jia2010}
 
 \qte
-  [\ul{Jie Zhang}, Ziyi Wang, Lingming Zhang, Dan Hao, Lei Zang, Shiyang Cheng, and Lu Zhang]
+  [Jie Zhang]
   {jie-zhang.jpg}
   {PMT applies ML to build a predictive model by collecting a series of easy-to-access features (e.g., coverage and mutation operator) on already executed mutants of earlier versions of the project. Based on this model, PMT \ul{predicts} the mutation testing results (i.e., whether each mutant is killed or not) of a new version of project without executing its mutants at all.}
   {zhang2016}
