--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -36,13 +36,13 @@
   {martin2008clean}
 
 \qte
-  [\ul{Qurat Ul Ain}, Wasi Haider Butt, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool]
+  [Qurat Ul Ain]
   {qurat-ul-ain.jpg}
   {If a bug is identified in one segment of code, all the similar segments need to be \ul{checked} for the same bug. Consequently, code duplication may lead to bug propagation that significantly affects the maintenance cost.}
   {ain2019}
 
 \qte
-  [Stefan Bellon, \ul{Rainer Koschke}, Giuliano Antoniol, Jens Krinke, Ettore Merlo]
+  [Rainer Koschke]
   {rainer-koschke.jpg}
   {The problem with code cloning is that errors in the original must be fixed in every copy. Other kinds of maintenance changes, for instance, extensions or adaptations, must be applied \ul{multiple times}, too. Yet, it is usually not documented \ul{where} code was copied.}
   {bellon2007}
@@ -135,13 +135,13 @@ duplicated.
   {fowler1999refactoring}
 
 \qte
-  [Simone Livieri, \ul{Yoshiki Higo}, Makoto Matsushita, Katsuro Inoue]
+  [Yoshiki Higo]
   {yoshiki-higo.jpg}
   {Code-clone analysis is a good vehicle to quantitatively understand the differences and improvements between two versions of the same software system}
   {livieri2007}
 
 \qte
-  [Ain, Qurat Ul, \ul{Wasi Haider Butt}, Muhammad Waseem Anwar, Farooque Azam, Bilal Maqbool]
+  [Wasi Haider Butt]
   {wasi-haider-butt.jpg}
   {We identified and analyzed 26 Code Clone Detection (CCD) tools, i.e., 13 existing and 13 proposed/developed. Moreover, 62 open-source subject systems whose source code is utilized for the CCD are presented.}
   {ain2019}
