--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -27,6 +27,9 @@
 \newcommand*\thetitle{Clone Coverage}
 \begin{document}
 
+% read this, it's one of the most recent:
+% https://www.computer.org/csdl/proceedings-article/icse/2024/021700b006/1V5BlfnaOpG
+
 \plush{\sqmTitlePage{11}{ynPTEzDTutc}}
 
 \qte
