--- a/main.bib
+++ b/main.bib
@@ -1286,6 +1286,7 @@
   publisher = {IEEE},
   title = {{Using Metrics to Evaluate Software System Maintainability}},
   year = {1994},
+  doi={10.1109/2.303623}
 }
 
 @misc{niedermayr2016,
