--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -42,7 +42,11 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
 
 \thought{In his presentation "\textit{Software Quality Metrics to Identify Risk}", Tom McCabe introduces the following categorisation to interpret cyclomatic complexity: 1--10 little risk, 11--20 moderate risk, 21--50 high risk, 50+ very high risk.}
 
-\thought{Graylin JAY et al., \textit{Cyclomatic Complexity and Lines of Code: Empirical Evidence of a Stable Linear Relationship}, Journal of Software Engineering \& Applications, Vol. 2, 2009, pp. 137--143}
+\qte
+  [Joanne E. Hale]
+  {joanne-hale.jpg}
+  {The models developed are found to successfully \ul{predict} roughly 90\% of CC’s variance by LOC alone. This suggest not only that the linear relationship between LOC and CC is stable, but the aspects of code complexity that CC measures, such as the size of the test case space, grow \ul{linearly} with source code size across languages and programming paradigms.}
+  {graylin2009cyclomatic}
 
 \thought{What is a complexity of a class? How about a module?}
 
