--- a/main.bib
+++ b/main.bib
@@ -1856,3 +1856,15 @@ Perspective}},
   year={2022},
   organization={IEEE}
 }
+
+@article{graylin2009cyclomatic,
+  title={{Cyclomatic Complexity and Lines of Code: Empirical Evidence of a Stable Linear Relationship}},
+  author={Graylin, Jay and Hale, Joanne E. and Smith, Randy K. and David, Hale and Kraft, Nicholas A. and Charles, Ward},
+  journal={{Journal of Software Engineering and Applications}},
+  volume={2},
+  number={03},
+  pages={137},
+  year={2009},
+  publisher={Scientific Research Publishing},
+  doi={10.4236/jsea.2009.23020}
+}
