more on correlation

--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -48,6 +48,12 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
   {The models developed are found to successfully \ul{predict} roughly 90\% of CC’s variance by LOC alone. This suggest not only that the linear relationship between LOC and CC is stable, but the aspects of code complexity that CC measures, such as the size of the test case space, grow \ul{linearly} with source code size across languages and programming paradigms.}
   {graylin2009cyclomatic}
 
+\qte
+  [Adnan Muslija]
+  {adnan-muslija.jpg}
+  {There is a \ul{low} to moderate correlation between the effort needed to \ul{test} a program and its complexity.}
+  {muslija2018correlation}
+
 \thought{What is a complexity of a class? How about a module?}
 
 \thought{\ul{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
