--- a/main.bib
+++ b/main.bib
@@ -1868,3 +1868,10 @@ Perspective}},
   publisher={Scientific Research Publishing},
   doi={10.4236/jsea.2009.23020}
 }
+
+@misc{muslija2018correlation,
+  title={{On the Correlation between Testing Effort and Software Complexity Metrics}},
+  author={Muslija, Adnan and Enoiu, Eduard P.},
+  year={2018},
+  organization={{PeerJ Preprints}}
+}
