--- a/main.bib
+++ b/main.bib
@@ -1875,3 +1875,11 @@ Perspective}},
   year={2018},
   organization={{PeerJ Preprints}}
 }
+
+@inproceedings{seront2005relationship,
+  title={{On the Relationship Between Cyclomatic Complexity and the Degree of Object Orientation}},
+  author={Seront, Gr{\'e}gory and Lopez, Miguel and Paulus, Val{\'e}rie and Habra, Naji},
+  booktitle={Proceedings of 9th ECOOP Workshop on Quantitative Approaches in Object-Oriented Software Engineering (QAOOSE)},
+  pages={109--117},
+  year={2005}
+}
