--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -54,6 +54,12 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
   {There is a \ul{low} to moderate correlation between the effort needed to \ul{test} a program and its complexity.}
   {muslija2018correlation}
 
+\qte
+  [Gregory Seront]
+  {gregory-seront.jpg}
+  {From the results of the experiments we conducted, we observed no significant correlation between the \ul{depth of inheritance} of a class and its weighted method complexity.}
+  {seront2005relationship}
+
 \thought{What is a complexity of a class? How about a module?}
 
 \thought{\ul{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
