--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -60,6 +60,12 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
   {From the results of the experiments we conducted, we observed no significant correlation between the \ul{depth of inheritance} of a class and its weighted method complexity.}
   {seront2005relationship}
 
+\qte
+  [Abd Jader]
+  {abd-jader.jpg}
+  {As the complexity of the software increases, the probability to introduce \ul{new errors} also increases.}
+  {abd2018}
+
 \thought{What is a complexity of a class? How about a module?}
 
 \thought{\ul{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
