--- a/main.bib
+++ b/main.bib
@@ -1883,3 +1883,12 @@ Perspective}},
   pages={109--117},
   year={2005}
 }
+
+@article{abd2018,
+  title={{Calculating McCabe's Cyclomatic Complexity Metric and Its Effecct on the Quality Aspects of Software}},
+  author={Jader, Abd and Najm, Marwa and Mahmood, Riyadh Zaghlool},
+  volue={3},
+  number={5},
+  year={2018},
+  journal={{International Journal of Innovative Research and Creative Technology}}
+}
