--- a/main.bib
+++ b/main.bib
@@ -1892,3 +1892,12 @@ Perspective}},
   year={2018},
   journal={{International Journal of Innovative Research and Creative Technology}}
 }
+
+@inproceedings{meine2007correlations,
+  title={{Correlations between Internal Software Metrics and Software Dependability in a Large Population of Small C/C++ Programs}},
+  author={J. P. van der Meulen, Meine and Revilla, Miguel A.},
+  booktitle={{Proceedings of the 18th International Symposium on Software Reliability (ISSRE'07)}},
+  pages={203--208},
+  year={2007},
+  organization={IEEE}
+}
