--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -66,6 +66,12 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
   {As the complexity of the software increases, the probability to introduce \ul{new errors} also increases.}
   {abd2018}
 
+\qte
+  [Meine van der Meulen]
+  {meine-van-der-meulen.jpg}
+  {There is a very strong correlation between Lines of Code and Halstead Volume and there is an even stronger correlation between Lines of Code and McCabe's Cyclomatic Complexity.}
+  {meine2007correlations}
+
 \thought{What is a complexity of a class? How about a module?}
 
 \thought{\ul{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
