--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -72,6 +72,24 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
   {There is a very strong correlation between Lines of Code and Halstead Volume and there is an even stronger correlation between Lines of Code and McCabe's Cyclomatic Complexity.}
   {meine2007correlations}
 
+\qte
+  [Yonghee Shin]
+  {yonghee-shin.jpg}
+  {The results of our study show weak evidence that software complexity is the enemy of software security for the nine complexity metrics we collected. However, \ul{vulnerable} code seems to be more complex than faulty code.}
+  {shin2008complexity}
+
+\qte
+  [Yonghee Shin]
+  {yonghee-shin.jpg}
+  {The results of our study show weak evidence that software complexity is the enemy of software security for the nine complexity metrics we collected. However, \ul{vulnerable} code seems to be more complex than faulty code.}
+  {shin2008complexity}
+
+\qte
+  [Abram Hindle]
+  {../20-commits-density/abram-hindle.jpg}
+  {Our results strongly suggest that measuring indentation is a cheap and accurate proxy for code complexity of revisions.}
+  {hindle2008reading}
+
 \thought{What is a complexity of a class? How about a module?}
 
 \thought{\ul{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
