--- a/main.bib
+++ b/main.bib
@@ -1901,3 +1901,22 @@ Perspective}},
   year={2007},
   organization={IEEE}
 }
+
+@inproceedings{shin2008complexity,
+  title={{Is Complexity Really the Enemy of Software Security?}},
+  author={Shin, Yonghee and Williams, Laurie},
+  booktitle={Proceedings of the 4th ACM Workshop on Quality of Protection},
+  pages={47--50},
+  year={2008},
+  doi={10.1145/1456362.1456372}
+}
+
+@inproceedings{hindle2008reading,
+  title={{Reading Beside the Lines: Indentation as a Proxy for Complexity Metrics}},
+  author={Hindle, Abram and Godfrey, Michael W. and Holt, Richard C.},
+  booktitle={{Proceedings of the 16th International Conference on Program Comprehension}},
+  pages={133--142},
+  year={2008},
+  organization={IEEE},
+  doi={10.1109/ICPC.2008.13}
+}
