--- a/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
+++ b/02-cyclomatic-complexity/02-cyclomatic-complexity.tex
@@ -90,6 +90,12 @@ I found this picture \href{https://craftofcoding.wordpress.com/2017/06/18/coding
   {Our results strongly suggest that measuring indentation is a cheap and accurate proxy for code complexity of revisions.}
   {hindle2008reading}
 
+\qte
+  [Md Abdullah Al Mamun]
+  {md-abdullah-al-mamun.jpg}
+  {We also found that complexity and \ul{documentation} domains are more correlated with size domain than themselves}
+  {mamun2017correlations}
+
 \thought{What is a complexity of a class? How about a module?}
 
 \thought{\ul{Feature creep} is one of the most common sources of cost and schedule overruns; it can even kill products and projects --- Wikipedia.}
