--- a/main.bib
+++ b/main.bib
@@ -1920,3 +1920,12 @@ Perspective}},
   organization={IEEE},
   doi={10.1109/ICPC.2008.13}
 }
+
+@inproceedings{mamun2017correlations,
+  title={{Correlations of Software Code Metrics: An Empirical Study}},
+  author={Mamun, Md Abdullah Al and Berger, Christian and Hansson, J{\"o}rgen},
+  booktitle={{Proceedings of the 27th International Workshop on Software Measurement and the 12th International Conference on Software Process and Product Measurement}},
+  pages={255--266},
+  year={2017},
+  doi={10.1145/3143434.3143445}
+}
