--- a/main.bib
+++ b/main.bib
@@ -1,7 +1,7 @@
 @book{symons1991software,
   author = {Symons, Charles R.},
   doi = {10.5555/120462},
-  publisher = {John Wiley \& Sons, Inc.},
+  publisher = {John Wiley \& Sons, Inc},
   title = {{Software Sizing and Estimating: Mk II FPA (Function Point Analysis)}},
   year = {1991},
 }
