--- a/main.bib
+++ b/main.bib
@@ -20,6 +20,7 @@
 
 @article{budd1981mutation,
   author = {Budd, Timothy A.},
+  doi = {10.5555/120462.1},
   publisher = {North-Holland Publishing Company, Amsterdam, Netherlands},
   title = {{Mutation Analysis: Ideas, Examples, Problems and Prospects}},
   year = {1981},
@@ -28,7 +29,7 @@
 @book{halstead1977elements,
   author = {Halstead, Maurice H.},
   doi = {10.5555/540137},
-  publisher = {Elsevier Science Inc.},
+  publisher = {Elsevier Science Inc},
   title = {{Elements of Software Science (Operating and Programming Systems Series)}},
   year = {1977},
 }
@@ -41,6 +42,7 @@
   pages = {371--379},
   publisher = {IEEE},
   title = {{Weak Mutation Testing and Completeness of Test Sets}},
+  volume = {20},  
   year = {1982},
 }
 
@@ -89,6 +91,7 @@
   pages = {345--361},
   publisher = {IEEE},
   title = {{A General Empirical Solution to the Macro Software Sizing and Estimating Problem}},
+  volume = {20},
   year = {1978},
 }
 
@@ -104,9 +107,10 @@
   doi = {10.1109/tse.1984.5010193},
   journal = {{IEEE Transactions on Software Engineering}},
   number = {1},
-  pages = {21--4},
+  pages = {4--21},
   publisher = {IEEE},
   title = {{Software Engineering Economics}},
+  volume = {20},
   year = {1984},
 }
 
@@ -120,6 +124,7 @@
 
 @inproceedings{albrecht1979measuring,
   author = {Albrecht, Allan J.},
+   doi = {10.5555/1795822.2},
   booktitle = {{Proceedings of the Joint SHARE, GUIDE, and IBM Application Development Symposium}},
   pages = {83--92},
   title = {{Measuring Application Development Productivity}},
@@ -134,6 +139,7 @@
   pages = {639--648},
   publisher = {IEEE},
   title = {{Software Function, Source Lines of Code, and Development Effort Prediction: A Software Science Validation}},
+  volume = {20},
   year = {1983},
 }
 
@@ -170,9 +176,9 @@
   doi = {10.1145/320434.320440},
   journal = {{ACM Transactions on Database Systems}},
   number = {1},
-  pages = {36--9},
+  pages = {9--36},
   publisher = {ACM},
-  title = {{The Entity-Relationship Model---Toward a Unified View of Data}},
+  title = {{The Entity-Relationship Model --- Toward a Unified View of Data}},
   volume = {1},
   year = {1976},
 }
@@ -246,7 +252,7 @@
   doi = {10.1109/icse.2004.1317450},
   organization = {IEEE},
   pages = {282--291},
-  title = {{An Empirical Study of Software Reuse Vs. Defect-Density and Stability}},
+  title = {{An Empirical Study of Software Reuse Versus Defect-Density and Stability}},
   year = {2004},
 }
 
@@ -256,6 +262,7 @@
   journal = {{IBM Systems Journal}},
   number = {3},
   title = {{Design and Code Inspections to Reduce Errors in Program Development}},
+  volume = {27},
   year = {1976},
 }
 
@@ -299,6 +306,7 @@
 
 @article{jones1996pragmatics,
   author = {Jones, Capers},
+  doi = {10.1109/32.815326.1},
   journal = {{Technical Council on Software Engineering}},
   number = {2},
   title = {{The Pragmatics of Software Process Improvements}},
@@ -399,6 +407,7 @@
   doi = {10.1016/j.infsof.2022.106847},
   journal = {{Information and Software Technology}},
   pages = {106847},
+  number = {8},
   publisher = {Elsevier},
   title = {{Predicting the Precise Number of Software Defects: Are We There Yet?}},
   volume = {146},
