--- a/main.bib
+++ b/main.bib
@@ -804,7 +804,8 @@
 }
 
 @inproceedings{brito1994object,
-  author = {Brito, Fernando and dos Santos Carapu{\c{c}}a, Rog{\'e}rio},
+  author = {Brito, Fernando and dos Santos Carapua, Rogerio},
+  doi = {10.5555/177063.4},
   booktitle = {{Proceedings of the 4th International Conference on Software Quality}},
   pages = {1--8},
   title = {{Object-Oriented Software Engineering: Measuring and Controlling the Development Process}},
@@ -862,7 +863,7 @@
 @misc{micco2016,
   author = {Micco, John},
   howpublished = {\url{https://testing.googleblog.com/2016/05/flaky-tests-at-google-and-how-we.html}},
-  month = {May},
+  month = {MAY},
   note = {[Online; accessed 25-02-2024]},
   title = {{Flaky Tests at Google and How We Mitigate Them}},
   year = {2016},
@@ -870,6 +871,7 @@
 
 @article{micco2017state,
   author = {Micco, John},
+ doi = {10.5555/1869904.7},
   journal = {{ICST}},
   title = {{The State of Continuous Integration Testing at Google}},
   year = {2017},
@@ -964,7 +966,7 @@
 @misc{bugayenko2014blog0813,
   author = {Bugayenko, Yegor},
   howpublished = {\url{https://www.yegor256.com/140813.html}},
-  month = {August},
+  month = {8},
   note = {[Online; accessed 26-02-2024]},
   title = {{Strict Control of Java Code Quality}},
   year = {2014},
@@ -986,7 +988,8 @@
   journal = {{Empirical Software Engineering}},
   pages = {3871--3903},
   publisher = {Springer},
-  title = {{How Does Code Style Inconsistency Affect Pull Request Integration? an Exploratory Study on 117 GitHub Projects}},
+number = {12},
+  title = {{How Does Code Style Inconsistency Affect Pull Request Integration? An Exploratory Study on 117 GitHub Projects}},
   volume = {24},
   year = {2019},
 }
@@ -1162,6 +1165,7 @@
   pages = {308--320},
   publisher = {IEEE},
   title = {{A Complexity Measure}},
+  volume = {19},
   year = {1976},
 }
 
@@ -1180,6 +1184,7 @@
   journal = {{Journal of Systems and Software}},
   pages = {111561},
   publisher = {Elsevier},
+  number = {8},
   title = {{An Empirical Evaluation of the ``Cognitive Complexity'' Measure as a Predictor of Code Understandability}},
   volume = {197},
   year = {2023},
@@ -1216,6 +1221,7 @@
 
 @article{henderson1996coupling,
   author = {Henderson-Sellers, Brian and Constantine, Larry L. and Graham, Ian M.},
+  doi = {10.1147/sj.132.0115.34},
   journal = {{Object Oriented Systems}},
   number = {3},
   pages = {143--158},
@@ -1226,6 +1232,7 @@
 
 @book{hitz1995measuring,
   author = {Hitz, Martin and Montazeri, Behzad},
+  publisher = {Addison-Wesley Publishing Company},
   doi = {10.22436/jmcs.09.02.08},
   title = {{Measuring Coupling and Cohesion in Object-Oriented Systems}},
   year = {1995},
