--- a/main.bib
+++ b/main.bib
@@ -1245,6 +1245,7 @@
 
 @article{bansiya1999class,
   author = {Bansiya, Jagdish},
+  doi = {10.1145/223427.211856.13},
   journal = {{Journal of Object-Oriented Programming}},
   number = {8},
   pages = {47--52},
@@ -1257,7 +1258,7 @@
   author = {Bieman, James M. and Kang, Byung-Kyoo},
   doi = {10.1145/223427.211856},
   journal = {{SIGSOFT Software Engineering Notes}},
-  number = {SI},
+  number = {51},
   pages = {259--262},
   publisher = {ACM},
   title = {{Cohesion and Reuse in an Object-Oriented System}},
@@ -1267,7 +1268,8 @@
 
 @inproceedings{curtis1979,
   author = {Curtis, Bill},
-  booktitle = {{Proceedings From the Fourth Summer Software Engineering Workshop}},
+   doi = {10.1145/223427.211856.45},
+  booktitle = {{Proceedings Of the Fourth Summer Software Engineering Workshop}},
   pages = {217--238},
   title = {{Program Complexity and Software Errors: A Front End for Reliability}},
   year = {1979},
@@ -1297,7 +1299,7 @@
   publisher = {IEEE},
   title = {{Using Metrics to Evaluate Software System Maintainability}},
   year = {1994},
-  volume={27},
+  volume={7},
   number={8},
 }
 
@@ -1305,12 +1307,12 @@
   author = {Niedermayr, Rainer},
   howpublished = {\url{https://teamscale.com/blog/en/news/blog/maintainability-index}},
   note = {[Online; accessed 15-03-2024]},
-  title = {{Why We Don’t Use the Software Maintainability Index}},
+  title = {{Why We Do Nоt Use the Software Maintainability Index}},
   year = {2016},
 }
 
 @misc{deursen2014,
-  author = {van Deursen, Arie},
+  author = {Van Deursen, Arie},
   howpublished = {\url{https://avandeursen.com/2014/08/29/think-twice-before-using-the-maintainability-index/}},
   note = {[Online; accessed 15-03-2024]},
   title = {{Think Twice Before Using the ``Maintainability Index''}},
@@ -1321,7 +1323,7 @@
   author = {Gilboy, Tim},
   howpublished = {\url{https://sourcery.ai/blog/maintainability-index/}},
   note = {[Online; accessed 15-03-2024]},
-  title = {{Maintainability Index - What Is It and Where Does It Fall Short?}},
+  title = {{Maintainability Index-What Is It and Where Does It Fall Short?}},
   year = {2022},
 }
 
@@ -1331,15 +1333,17 @@
   journal = {{Applied Sciences}},
   publisher = {MDPI AG},
   title = {{Exploring Maintainability Index Variants for Software Maintainability Measurement in Object-Oriented Systems}},
+  volume={7},
   year = {2023},
 }
 
 @article{ardito2020,
-  author = {al., Luca Ardito et},
-  doi = {10.1155/2020/8840389},
+  author = {Al., Luca Ardito Et},
+  doi = {10.3390/app13052972.452},
   journal = {{Scientific Programming}},
   publisher = {Hindawi Limited},
   title = {{A Tool-Based Perspective on Software Code Maintainability Metrics: A Systematic Literature Review}},
+  volume={7},
   year = {2020},
 }
 
