Revert "Update main.bib"

--- a/main.bib
+++ b/main.bib
@@ -459,7 +459,7 @@
   doi = {10.1109/wcre.2007.21},
   organization = {IEEE},
   pages = {70--79},
-  title = {{Do Code and Comments Co-Evolve? On the Relation Between Source Code and Comment Changes}},
+  title = {{Do Code and Comments Co-Evolve? on the Relation Between Source Code and Comment Changes}},
   year = {2007},
 }
 
@@ -478,7 +478,7 @@
   doi = {10.1109/esem.2011.22},
   organization = {IEEE},
   pages = {137--146},
-  title = {{How Good Is Your Comment? A Study of Comments in Java Programs}},
+  title = {{How Good Is Your Comment? a Study of Comments in Java Programs}},
   year = {2011},
 }
 
@@ -519,7 +519,7 @@
   booktitle = {{Proceedings of the 33rd Annual Frontiers in Education}},
   doi = {10.1109/fie.2003.1263332},
   organization = {IEEE},
-  pages = {130--131},
+  pages = {T3C--T3C},
   title = {{Do Class Comments Aid Java Program Understanding?}},
   volume = {1},
   year = {2003},
@@ -557,7 +557,7 @@
   author = {Stapleton, Sean and Gambhir, Yashmeet and LeClair, Alexander and Eberhart, Zachary and Weimer, Westley and Leach, Kevin and Huang, Yu},
   booktitle = {{Proceedings of the 28th International Conference on Program Comprehension}},
   doi = {10.1145/3387904.3389258},
-  pages = {2--13},
+  pages = {13--2},
   title = {{A Human Study of Comprehension and Code Summarization}},
   year = {2020},
 }
@@ -565,7 +565,7 @@
 @book{kernighan1974elements,
   author = {Kernighan, Brian W. and Plauger, Phillip James},
   doi = {10.5555/601121},
-  publisher = {McGraw-Hill, Inc},
+  publisher = {McGraw-Hill, Inc.},
   title = {{The Elements of Programming Style}},
   year = {1974},
 }
@@ -662,7 +662,7 @@
   doi = {10.1109/icpc.2008.24},
   organization = {IEEE},
   pages = {182--191},
-  title = {{What's a Typical Commit? A Characterization of Open Source Software Repositories}},
+  title = {{What's a Typical Commit? a Characterization of Open Source Software Repositories}},
   year = {2008},
 }
 
@@ -719,7 +719,6 @@
   journal = {{IEEE Transactions on Software Engineering}},
   publisher = {IEEE},
   title = {{Automatic Commit Message Generation: A Critical Review and Directions for Future Work}},
-  volume = {16},
   year = {2024},
 }
 
@@ -727,8 +726,8 @@
   author = {Hindle, Abram and German, Daniel M. and Holt, Ric},
   booktitle = {{Proceedings of the International Working Conference on Mining Software Repositories}},
   doi = {10.1145/1370750.1370773},
-  pages = {99--108},
-  title = {{What Do Large Commits Tell Us? A Taxonomical Study of Large Commits}},
+  pages = {108--99},
+  title = {{What Do Large Commits Tell Us? a Taxonomical Study of Large Commits}},
   year = {2008},
 }
 
@@ -781,7 +780,6 @@
   pages = {364--370},
   publisher = {IEEE},
   title = {{The Source Code Control System}},
-  volume = {31},
   year = {1975},
 }
 
@@ -798,7 +796,7 @@
 @book{lorenz1994object,
   author = {Lorenz, Mark and Kidd, Jeff},
   doi = {10.5555/177063},
-  publisher = {Prentice-Hall, Inc},
+  publisher = {Prentice-Hall, Inc.},
   title = {{Object-Oriented Software Metrics: A Practical Guide}},
   year = {1994},
 }
