Revert "Update main.bib"

--- a/main.bib
+++ b/main.bib
@@ -20,7 +20,6 @@
 
 @article{budd1981mutation,
   author = {Budd, Timothy A.},
-  doi = {10.5555/120462.1},
   publisher = {North-Holland Publishing Company, Amsterdam, Netherlands},
   title = {{Mutation Analysis: Ideas, Examples, Problems and Prospects}},
   year = {1981},
@@ -29,7 +28,7 @@
 @book{halstead1977elements,
   author = {Halstead, Maurice H.},
   doi = {10.5555/540137},
-  publisher = {Elsevier Science Inc},
+  publisher = {Elsevier Science Inc.},
   title = {{Elements of Software Science (Operating and Programming Systems Series)}},
   year = {1977},
 }
@@ -42,7 +41,6 @@
   pages = {371--379},
   publisher = {IEEE},
   title = {{Weak Mutation Testing and Completeness of Test Sets}},
-  volume = {20},  
   year = {1982},
 }
 
@@ -91,7 +89,6 @@
   pages = {345--361},
   publisher = {IEEE},
   title = {{A General Empirical Solution to the Macro Software Sizing and Estimating Problem}},
-  volume = {20},
   year = {1978},
 }
 
@@ -107,10 +104,9 @@
   doi = {10.1109/tse.1984.5010193},
   journal = {{IEEE Transactions on Software Engineering}},
   number = {1},
-  pages = {4--21},
+  pages = {21--4},
   publisher = {IEEE},
   title = {{Software Engineering Economics}},
-  volume = {20},
   year = {1984},
 }
 
@@ -124,7 +120,6 @@
 
 @inproceedings{albrecht1979measuring,
   author = {Albrecht, Allan J.},
-   doi = {10.5555/1795822.2},
   booktitle = {{Proceedings of the Joint SHARE, GUIDE, and IBM Application Development Symposium}},
   pages = {83--92},
   title = {{Measuring Application Development Productivity}},
@@ -139,7 +134,6 @@
   pages = {639--648},
   publisher = {IEEE},
   title = {{Software Function, Source Lines of Code, and Development Effort Prediction: A Software Science Validation}},
-  volume = {20},
   year = {1983},
 }
 
@@ -176,9 +170,9 @@
   doi = {10.1145/320434.320440},
   journal = {{ACM Transactions on Database Systems}},
   number = {1},
-  pages = {9--36},
+  pages = {36--9},
   publisher = {ACM},
-  title = {{The Entity-Relationship Model --- Toward a Unified View of Data}},
+  title = {{The Entity-Relationship Model---Toward a Unified View of Data}},
   volume = {1},
   year = {1976},
 }
@@ -252,7 +246,7 @@
   doi = {10.1109/icse.2004.1317450},
   organization = {IEEE},
   pages = {282--291},
-  title = {{An Empirical Study of Software Reuse Versus Defect-Density and Stability}},
+  title = {{An Empirical Study of Software Reuse Vs. Defect-Density and Stability}},
   year = {2004},
 }
 
@@ -262,7 +256,6 @@
   journal = {{IBM Systems Journal}},
   number = {3},
   title = {{Design and Code Inspections to Reduce Errors in Program Development}},
-  volume = {27},
   year = {1976},
 }
 
@@ -306,7 +299,6 @@
 
 @article{jones1996pragmatics,
   author = {Jones, Capers},
-  doi = {10.1109/32.815326.1},
   journal = {{Technical Council on Software Engineering}},
   number = {2},
   title = {{The Pragmatics of Software Process Improvements}},
@@ -407,7 +399,6 @@
   doi = {10.1016/j.infsof.2022.106847},
   journal = {{Information and Software Technology}},
   pages = {106847},
-  number = {8},
   publisher = {Elsevier},
   title = {{Predicting the Precise Number of Software Defects: Are We There Yet?}},
   volume = {146},
