--- a/main.bib
+++ b/main.bib
@@ -598,6 +598,7 @@
   publisher = {Pearson Education},
   title = {{Clean Code: A Handbook of Agile Software Craftsmanship}},
   year = {2008},
+  doi={10.5555/1388398}
 }
 
 @inproceedings{barnett2016relationship,
