--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Code Style}
 \begin{document}
 
-\plush{\sqmTitlePage{22}{}}
+\plush{\sqmTitlePage{22}{hPZGoEAXwY0}}
 
 \pptBanner{Which One \ul{Looks} Better for You?}
 \begin{pptWide}{3}
