--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Static Analysis}
 \begin{document}
 
-\plush{\sqmTitlePage{23}{}}
+\plush{\sqmTitlePage{23}{QK2XQvYoEpQ}}
 
 \qte
   [Steven Johnson]
