--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -25,7 +25,7 @@
 \newcommand*\thetitle{Neural Metrics}
 \begin{document}
 
-\plush{\sqmTitlePage{24}{}}
+\plush{\sqmTitlePage{24}{6Rog8QhuXTY}}
 
 \qte
   [Michael Pradel]
